--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Paginated Iframe Viewer">
-    <meta property="og:description" content="A dynamic iframe viewer with pagination.">
+    <meta property="og:title" content="一生只監督你一個">
+    <meta property="og:description" content="一生只監督你一個">
     <meta property="og:image" content="https://memeprod.sgp1.digitaloceanspaces.com/user-wtf/1588845550498.jpg">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yourwebsite.com">
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Paginated Iframe Viewer">
-    <meta name="twitter:description" content="A dynamic iframe viewer with pagination.">
+    <meta name="twitter:title" content="一生只監督你一個">
+    <meta name="twitter:description" content="一生只監督你一個">
     <meta name="twitter:image" content="https://memeprod.sgp1.digitaloceanspaces.com/user-wtf/1588845550498.jpg">
 
-    <title>一生指監督你一個</title>
+    <title>一生只監督你一個</title>
     <style>
         body {
             font-family: Arial, sans-serif;
